--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/top_logo.ico" type="image/x-icon">
 
   <!--
     - custom css link
@@ -130,19 +130,19 @@
 
           <li class="social-item">
             <a href="#" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
+              <ion-icon name="logo-google-scholar"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
             <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
+              <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
             <a href="#" class="social-link">
-              <ion-icon name="logo-instagram"></ion-icon>
+              <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
 
@@ -178,13 +178,14 @@
             <button class="navbar-link" data-nav-link>Resume</button>
           </li>
 
-          <li class="navbar-item">
+          <!-- <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Portfolio</button>
-          </li>
+          </li> -->
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Blog</button>
+            <button class="navbar-link" data-nav-link>Projects</button>
           </li>
+          
 
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
@@ -229,7 +230,7 @@
           - service
         -->
 
-        <section class="service">
+        <!-- <section class="service">
 
           <h3 class="h3 service-title">What i'm doing</h3>
 
@@ -302,14 +303,14 @@
 
           </ul>
 
-        </section>
+        </section> -->
 
 
         <!--
           - testimonials
         -->
 
-        <section class="testimonials">
+        <!-- <section class="testimonials">
 
           <h3 class="h3 testimonials-title">Testimonials</h3>
 
@@ -405,13 +406,13 @@
 
           </ul>
 
-        </section>
+        </section> -->
 
 
         <!--
           - testimonials modal
         -->
-
+<!-- 
         <div class="modal-container" data-modal-container>
 
           <div class="overlay" data-overlay></div>
@@ -450,13 +451,13 @@
 
           </section>
 
-        </div>
+        </div> -->
 
 
         <!--
           - clients
         -->
-
+<!-- 
         <section class="clients">
 
           <h3 class="h3 clients-title">Clients</h3>
@@ -506,7 +507,7 @@
       </article>
 
 
-
+ -->
 
 
       <!--
