--- a/index.html
+++ b/index.html
@@ -183,17 +183,12 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
+            I am a student at Carnegie Mellon University, majoring in Mechanical Engineering with a focus on Robotics. 
+      
           </p>
 
           <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            I am passionate about robotics and artificial intelligence. I am currently working on researching and developing a robotic arm that can be used in the household field.
           </p>
         </section>
 
@@ -202,7 +197,7 @@
           - service
         -->
 
-        <!-- <section class="service">
+    <section class="service">
 
           <h3 class="h3 service-title">What i'm doing</h3>
 
@@ -275,14 +270,14 @@
 
           </ul>
 
-        </section> -->
+        </section>
 
 
         <!--
           - testimonials
         -->
 
-        <!-- <section class="testimonials">
+        <section class="testimonials">
 
           <h3 class="h3 testimonials-title">Testimonials</h3>
 
@@ -378,13 +373,13 @@
 
           </ul>
 
-        </section> -->
+        </section>
 
 
         <!--
           - testimonials modal
         -->
-<!-- 
+
         <div class="modal-container" data-modal-container>
 
           <div class="overlay" data-overlay></div>
@@ -423,13 +418,13 @@
 
           </section>
 
-        </div> -->
+        </div>
 
 
         <!--
           - clients
         -->
-<!-- 
+
         <section class="clients">
 
           <h3 class="h3 clients-title">Clients</h3>
@@ -479,7 +474,7 @@
       </article>
 
 
- -->
+
 
 
       <!--
