--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
           </li> -->
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="linkedin.com/in/feiya-zhu" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="github.com/Pertical" class="social-link">
               <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
@@ -199,7 +199,7 @@
 
     <section class="service">
 
-          <h3 class="h3 service-title">What i'm doing</h3>
+          <h3 class="h3 service-title">What I'm interested</h3>
 
           <ul class="service-list">
 
@@ -211,7 +211,7 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web design</h4>
+                <h4 class="h4 service-item-title">Automotive</h4>
 
                 <p class="service-item-text">
                   The most modern and high-quality design made at a professional level.
@@ -227,7 +227,7 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web development</h4>
+                <h4 class="h4 service-item-title">Robotics</h4>
 
                 <p class="service-item-text">
                   High-quality development of sites at the professional level.
@@ -243,7 +243,7 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Mobile apps</h4>
+                <h4 class="h4 service-item-title">Artificial Intelligence</h4>
 
                 <p class="service-item-text">
                   Professional development of applications for iOS and Android.
@@ -271,63 +271,6 @@
           </ul>
 
         </section>
-
-
-
-        <!--
-          - clients
-        -->
-
-        <section class="clients">
-
-          <h3 class="h3 clients-title">Clients</h3>
-
-          <ul class="clients-list has-scrollbar">
-
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-1-color.png" alt="client logo">
-              </a>
-            </li>
-
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-2-color.png" alt="client logo">
-              </a>
-            </li>
-
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-3-color.png" alt="client logo">
-              </a>
-            </li>
-
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-4-color.png" alt="client logo">
-              </a>
-            </li>
-
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-5-color.png" alt="client logo">
-              </a>
-            </li>
-
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-6-color.png" alt="client logo">
-              </a>
-            </li>
-
-          </ul>
-
-        </section>
-
-      </article>
-
-
-
 
 
       <!--
