--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
 
           </ol>
 
-        <!-- </section>
+        </section>
 
         <section class="skill">
 
@@ -442,7 +442,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
+                <h5 class="h5">Python</h5>
                 <data value="80">80%</data>
               </div>
 
@@ -452,48 +452,8 @@
 
             </li>
 
-            <li class="skills-item">
 
-              <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
-                <data value="70">70%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Branding</h5>
-                <data value="90">90%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 90%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
-                <data value="50">50%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 50%;"></div>
-              </div>
-
-            </li>
-
-          </ul>
-
-        </section> -->
+        </section>
 
       </article>
 
@@ -568,7 +528,7 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="Research Projects">
               <a href="#">
 
                 <figure class="project-img">
@@ -576,12 +536,12 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                  <img src="./assets/images/Setup.png" alt="Robotic Coke Pouring" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
+                <h3 class="project-title">Robotic Coke Pouring</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Robotic Manipulation</p>
 
               </a>
             </li>
