--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
 
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Projects</button>
+            <button class="navbar-link" data-nav-link>Project</button>
           </li>
 
           
-          <li class="navbar-item">
+          <!-- <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
-          </li>
+          </li> -->
 
         </ul>
 
@@ -562,13 +562,13 @@
         - #PORTFOLIO
       -->
 
-      <article class="portfolio" data-page="projects">
+      <article class="portfolio" data-page="project">
 
         <header>
-          <h2 class="h2 article-title">Projects</h2>
+          <h2 class="h2 article-title">Project</h2>
         </header>
 
-        <section class="projects">
+        <section class="project">
 
           <ul class="filter-list">
 
@@ -609,15 +609,15 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Research Projects</button>
+                <button data-select-item>Research Project</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Academic Projects</button>
+                <button data-select-item>Academic Project</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Personal Projects</button>
+                <button data-select-item>Personal Project</button>
               </li>
 
             </ul>
@@ -639,7 +639,7 @@
 
                 <h3 class="project-title">Robotic Coke Pouring</h3>
 
-                <p class="project-category">Research Projects</p>
+                <p class="project-category">Research Project</p>
 
               </a>
             </li>
@@ -653,57 +653,9 @@
 
 
 
-
-
-      <!--
-        - #CONTACT
-      -->
-
-      <article class="contact" data-page="contact">
-
-        <header>
-          <h2 class="h2 article-title">Contact</h2>
-        </header>
-
-        <section class="mapbox" data-mapbox>
-          <figure>
-            <iframe
-              src="https://www.google.com/maps/place/Pittsburgh,+PA/@40.4406,-79.9959,12z/data=!4m6!3m5!1s0x8834f16f48068503:0x8df915a15aa21b34!8m2!3d40.4406248!4d-79.9958864!16zL20vMDY4cDI?entry=ttu"
-              width="400" height="300" loading="lazy"></iframe>
-          </figure>
-        </section>
-
-        <section class="contact-form">
-
-          <h3 class="h3 form-title">Contact Form</h3>
-
-          <form action="#" class="form" data-form>
-
-            <div class="input-wrapper">
-              <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
-
-              <input type="email" name="email" class="form-input" placeholder="Email address" required data-form-input>
-            </div>
-
-            <textarea name="message" class="form-input" placeholder="Your Message" required data-form-input></textarea>
-
-            <button class="form-btn" type="submit" disabled data-form-btn>
-              <ion-icon name="paper-plane"></ion-icon>
-              <span>Send Message</span>
-            </button>
-
-          </form>
-
-        </section>
-
-      </article>
-
     </div>
 
   </main>
-
-
-
 
 
 
