--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
           </li>
 
           <li class="social-item">
-            <a href="linkedin.com/in/feiya-zhu" class="social-link">
+            <a href="https://www.linkedin.com/in/feiya-zhu" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="github.com/Pertical" class="social-link">
+            <a href="https://github.com/Pertical" class="social-link">
               <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
