--- a/index.html
+++ b/index.html
@@ -118,15 +118,15 @@
               <ion-icon name="logo-google"></ion-icon>
             </a>
           </li>
-
+          
           <li class="social-item">
-            <a href="https://www.linkedin.com/in/feiya-zhu" class="social-link">
+            <a href="https://www.linkedin.com/in/feiya-zhu/" class="social-link" target="_blank">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
-
+          
           <li class="social-item">
-            <a href="https://github.com/Pertical" class="social-link">
+            <a href= "https://github.com/Pertical"  class="social-link" target="_blank">
               <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
