--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
 
               <p class="timeline-text">
                 Researching robotic manipulation of transparent objects using Franka-Emika robot arm, 
-                integrating singular vision-based Nerf 3D reconstruction along with Vision-Transformers. 
+                integrating singular vision-based NeRF 3D reconstruction along with Vision-Transformers. 
                 This ongoing project has potential applications in assistive robots, enabling them to perceive transparent objects in dynamic environments using only an RGB camera.
               </p>
 
