--- a/index.html
+++ b/index.html
@@ -644,6 +644,31 @@
               </a>
             </li>
 
+
+
+
+
+
+
+
+            <li class="project-item  active" data-filter-item data-category="Research Projects">
+              <a href="https://sites.google.com/view/24677-linear-control-systems/home">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Title_PIC.png" alt="Controller" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Autonomous Vehicle Control and Planning</h3>
+
+                <p class="project-category">Academic Project</p>
+
+              </a>
+            </li>
+
           </ul>
 
         </section>
