--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             During my undergraduate study at <a href="https://www.kettering.edu/" style="display: inline; color: var(--orange-yellow-crayola)">Kettering University</a>,
             I earned a bachelor's degree in Mechanical Engineering with a concentration in Automotive. 
             Under the guidance of <a href="https://works.bepress.com/susanta-das/" style="display: inline; color: var(--orange-yellow-crayola)">Prof. Susanta Das</a>, 
-            I focused on my senior thesis, addressing the thermal management of automotive seating systems, sponsored by <a href="https://gentherm.com/" style="display: inline; color: var(--orange-yellow-crayola)">Gentherm</a>
+            I focused on my senior thesis, addressing the thermal management of automotive seating systems, sponsored by <a href="https://gentherm.com/" style="display: inline; color: var(--orange-yellow-crayola)">Gentherm</a>.
             Additionally, I worked as a research assistant under the supervision 
             of <a href="https://www.linkedin.com/in/gianfranco-digiuseppe-ph-d-b9bb7952/" style="display: inline; color: var(--orange-yellow-crayola)">Prof. Gianfranco DiGiuseppe</a>, contributing to a project that explored the application of Solid Oxide Fuel Cells (SOFC) in automotive contexts.
            
@@ -425,7 +425,7 @@
 
           <div class="title-wrapper">
             <div class="icon-box">
-              <ion-icon name="book-outline"></ion-icon>
+              <ion-icon name="briefcase-outline"></ion-icon>
             </div>
 
             <h3 class="h3">Research Experience</h3>
@@ -577,15 +577,15 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Research Projects</button>
+              <button data-filter-btn>Research Project</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Academic Projects</button>
+              <button data-filter-btn>Academic Project</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Personal Projects</button>
+              <button data-filter-btn>Personal Project</button>
             </li>
 
           </ul>
@@ -626,7 +626,7 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="Research Projects">
+            <li class="project-item  active" data-filter-item data-category="Research Project">
               <a href="https://sites.google.com/andrew.cmu.edu/robotcokepouring/main">
 
                 <figure class="project-img">
@@ -646,12 +646,7 @@
 
 
 
-
-
-
-
-
-            <li class="project-item  active" data-filter-item data-category="Research Projects">
+            <li class="project-item  active" data-filter-item data-category="Research Project">
               <a href="https://sites.google.com/view/24677-linear-control-systems/home">
 
                 <figure class="project-img">
@@ -668,6 +663,47 @@
 
               </a>
             </li>
+
+
+
+            <li class="project-item  active" data-filter-item data-category="Academic Project">
+              <a href="https://sites.google.com/view/24787project/home">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/ScientProject.jpg" alt="Controller" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Real-time Facial Expression Classification using Shallow Neural Networks</h3>
+
+                <p class="project-category">Academic Project</p>
+
+              </a>
+            </li>
+
+
+            
+            <li class="project-item  active" data-filter-item data-category="Academic Project">
+              <a href="https://sites.google.com/view/24787project/home">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/ScientProject.jpg" alt="Controller" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Real-time Facial Expression Classification using Shallow Neural Networks</h3>
+
+                <p class="project-category">Academic Project</p>
+
+              </a>
+            </li>
+
 
           </ul>
 
