--- a/index.html
+++ b/index.html
@@ -687,17 +687,17 @@
 
             
             <li class="project-item  active" data-filter-item data-category="Academic Project">
-              <a href="https://sites.google.com/view/24787project/home">
+              <a href="https://sites.google.com/view/16833/home">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/ScientProject.jpg" alt="Controller" loading="lazy">
+                  <img src="./assets/images/16833Project.jpg" alt="Controller" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Real-time Facial Expression Classification using Shallow Neural Networks</h3>
+                <h3 class="project-title">Robust SLAM Under Shaky Robotic Motion</h3>
 
                 <p class="project-category">Academic Project</p>
 
